fix broken css

--- a/css/styles.css
+++ b/css/styles.css
@@ -71,8 +71,8 @@ a:active {
 }
 
 .logoImage {
-  width: 44px;
-  height: 44px;
+  width: 40px;
+  height: 40px;
 }
 
 .intro {
